[b][color=orange]v4.65 for Shadowland PrePatch[/color], 18.11.2020[/b][list]
[*]Fixed a typo.. whoops, thx Kringel
[*]Replaced the AFK Time with a Logout timer[/list]


[b][color=orange]v4.64 for Shadowland PrePatch[/color], 18.11.2020[/b][list]
[*]The AutoButtons will now hide in Pet Battle
[*]Dont force the spacing on UnitFrames Buffs/Debuffs
[*]Added an notification icon on the MicroBar Guild button. Thx fang2hou <3[/list]


[b][color=orange]v4.63 for Shadowland PrePatch[/color], 08.11.2020[/b][list]
[*]MicroBar: Added a Game Menu Button
[*]Reposition Wowheadlinks on the WorldMap
[*]Updated Cooldown Flash
[*]Fixed an option error on Rectangle Minimap/LocPanel
[*]Added Zhadar to the Patreon list <3[/list]


[b][color=orange]v4.62 for Shadowland PrePatch[/color], 03.11.2020[/b][list]
[*]Fixed an install whoopsi
[*]Small code updates
[*]Added Deezyl to the Patreon list <3[/list]


[b][color=orange]v4.61 for Shadowland PrePatch[/color], 02.11.2020[/b][list]
[*]Changed the option layout a bit
[*]Style the LocationPanel again
[*]Fixed Paragon Reputation Notification
[*]Updated deDE locales from Dlarge & Rav
[*]Updated the Rectangle Minimap Code -- Credits: Windtools
[*]Updated/Fixed some skins
[*]MicroBar: Added 2 new Buttons: Professions & Volume
[*]MicroBar: Fixed an issue on initial load with Heartstones
[*]Prevent errors on AFK Mode (hopefully)
[*]Added: Patrons & Donator List to: Information[/list]


[b][color=orange]v4.60 for Shadowland PrePatch[/color], 24.10.2020[/b][list]
[*]Added a skin for the AddOn WarPlan
[*]Fixed an install whoopsi for the position on AB3 >.>
[*]Added a frame on the MailBox SendMail Frame, to easy send mail to contacts
[*]The Keybinds for the AutoButtons now finally works
[*]Added a custom fade option if you use mouseOver on AutoButtons
[*]Add a right click function for MicroBar: Collection & Toybox Buttons
[*]Small tweaks and skin upates[/list]


[b][color=orange]v4.59 for Shadowland PrePatch[/color], 22.10.2020[/b][list]