@@ -16,8 +16,13 @@ local DISABLED_FONT_COLOR = DISABLED_FONT_COLOR
 
 local ChangeLogData = {
 	"Changes:",
-		"• Fixed a typo.. whoops, thx Kringel",
-		"• Replaced the AFK Time with a Logout timer",
+		"• Added an option to adjust the waypoints",
+		"• Fixed the backdrop from the Minimap if S&L is enabled",
+		"• Fixed Time DataText",
+		"• Removed GuildBest from the Mythic Keystone frame",
+		"• Reworked Instance Difficulty",
+		"• Fixed border color on the Merchant frame",
+		"• Added some new hearthstones/flasks/food/pots for Shadowlands",
 
 		-- "• ''",
 	" ",
